--- a/kickers/app/src/main/res/values/strings.xml
+++ b/kickers/app/src/main/res/values/strings.xml
@@ -18,12 +18,14 @@
     <string name="select_game_rules">Select game rules</string>
 
     <!-- Match finished dialog -->
-    <string name="match_finished">Match finished</string>
+    <string name="match_statistics">Match statistics</string>
     <string name="goals">Goals</string>
-    <string name="own_goals">Own goals</string>
+    <string name="own_goals">Own</string>
+    <string name="total_matches">Total</string>
+    <string name="goals_balance">Total</string>
     <string name="red_team_wins">Red team wins!</string>
     <string name="blue_team_wins">Blue team wins!</string>
-    <string name="goto_next_match">GO TO NEXT MATCH!</string>
+    <string name="goto_next_match">Next match</string>
 
     <!-- Create player dialog -->
     <string name="save_player">Save player</string>
